Minor CSS text alignment fix with inputs and textareas

--- a/css/snacktack.css
+++ b/css/snacktack.css
@@ -147,6 +147,7 @@ ul li a:hover {
 
 form ul li input[type=text] {
 	overflow: hidden;
+	padding: 0 4px;
 }
 
 form ul li textarea {
@@ -158,8 +159,7 @@ form ul li textarea {
 
 form ul li input[type=text], form ul li textarea {
 	background-color: #EEEEEE;
-	border: solid 0px #E5E5E5;
-	padding: 0;
+	border: solid 1px #E5E5E5;
 	width: 100%;
 }
 
